2010-09-01  Jaroslav Hajek  <highegg@gmail.com>

	* io/dlmwrite.m: Don't fclose if file ID is supplied.

2010-09-01  Jaroslav Hajek  <highegg@gmail.com>

	* io/dlmwrite.m: Support file IDs.

2010-07-07  David Bateman  <dbateman@free.fr>

	* miscellaneous/what.m: Off by one error.

	* plot/__go_draw_axes__.m: Improve matlab compatibility for "."
	marker.

2010-08-31  Ben Abbott <bpabbott@mac.com>

	* plot/private/__actual_axis_position__.m, plot/__go_draw_axes__.m,
	plot/axis.m, plot/colorbar.m, plot/daspect.m, plot/plotyy.m,
	plot/subplot.m: Treatment of activepositionproperty for gnuplot.
	* plot/__go_draw_axes__.m: Missing part of last changeset.
	* plot/__go_draw_axes__.m: Fix specification of pointtype for patches
	(bug introduced in rev 2f9de135e7f9).

2010-08-30  Ben Abbott <bpabbott@mac.com>

	* plot/__go_draw_axes__.m: Use gnuplot's pentagon for marker == 'p'.

2010-08-27  Ben Abbott <bpabbott@mac.com>

	* plot/colorbar.m, * plot/__go_draw_axes__.m,
	plot/private/__actual_axis_position__.m: Don't pass figure handle to
	__calc_dimensions__.
	* plot/private/__ghostscript__.m: Don't set anti-aliasing options for
	vector formats.
	* plot/__print_parse_opts__.m: Fix tests.

2010-08-27  Jordi Gutiérrez Hermoso  <jordigh@gmail.com>

	* plot/__go_draw_axes__.m (__calc_dimensions__): Delete.
	* plot/__actual_axis_position__.m (__calc_dimensions__): Delete.

2010-08-27  Pascal A. Dupuis  <Pascal.Dupuis@worldonline.be>

	* plot/hold.m: If arg is axis handle, get corresponding figure
	handle from axis parent property.

2010-08-27  Ben Abbott <bpabbott@mac.com>

	* plot/__gnuplot_print__.m: Properly restore fontsize after eps output.
	* plot/plotyy.m: Modified demo for changeset 10912 9abc67b4bd4f.
	* plot/__fltk_print__.m, plot/__go_draw_axes__.m,
	plot/__go_draw_figure__.m, plot/__gnuplot_print__.m,
	plot/gnuplot_drawnow.m, plot/print.m, plot/private/__ghostscript__.m,
	plot/private/__tight_eps_bbox__.m: Unify gnuplot printing with the